--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,7 @@ html {
   @apply scroll-smooth;
   scrollbar-width: none;
   -ms-overflow-style: none;
+  scroll-behavior: smooth;
 }
 
 @media screen and (min-width: 1024px) {
